fix text overflowing out of card

--- a/style/styles.css
+++ b/style/styles.css
@@ -42,6 +42,7 @@ button:hover {
     width:45%;
     border-radius: 5px;
     transition: 0.3s;
+    overflow-wrap: break-word;
 }
 
 .card-content {
